--- a/src/main/webapp/static/template/temperature/listTpl.html
+++ b/src/main/webapp/static/template/temperature/listTpl.html
@@ -1,7 +1,11 @@
 <div class="list_top">
 	<button id="chart" type="button" class="btn btn-primary right">图表模式></button>
 </div>
+<div class="panel panel-success">
+  <div class="panel-heading">
+    <h3 class="panel-title">温度管理</h3>
+  </div>
+  <div id="demoList">
 
-<div id="demoList">
-
+  </div>
 </div>
