--- a/src/main/webapp/static/template/remindValue/listTpl.html
+++ b/src/main/webapp/static/template/remindValue/listTpl.html
@@ -1,7 +1,11 @@
 <div class="list_top">
 	<button id="add" type="button" class="btn btn-primary right">新增</button>
 </div>
+<div class="panel panel-success">
+  <div class="panel-heading">
+    <h3 class="panel-title">告警管理</h3>
+  </div>
+  <div id="demoList">
 
-<div id="demoList">
-
+  </div>
 </div>
