--- a/src/main/webapp/static/template/login/findPassword/contentTpl.html
+++ b/src/main/webapp/static/template/login/findPassword/contentTpl.html
@@ -1,7 +1,7 @@
 <div class="findPassword_content flex">
     <div class="flex1">
         <ul class="flex">
-            <li class="w80">
+            <li class="w100 fs20">
                 电子邮箱
             </li>
             <li>
@@ -9,9 +9,9 @@
             </li>
         </ul>
 
-        <button id="findPassword" type="button" class="btn btn-primary mt20 ml80" >提交</button>
+        <button id="findPassword" type="button" class="btn btn-primary mt20 ml100" >提交</button>
     </div>
-    <div class="flex1 bl1">
+    <div class="flex1 bl1" style="border-left: 2px solid #68A1C3;">
         <a id="register" type="button" class="btn btn-link ml20">注册新帐号</a>
     </div>
 </div>
