--- a/src/main/webapp/static/template/login/login/contentTpl.html
+++ b/src/main/webapp/static/template/login/login/contentTpl.html
@@ -2,12 +2,9 @@
     <div class="flex1">
 
     </div>
-    <div class="page">
-        <img src="./img/login_sj.jpg">
-    </div>
     <div class="page input_page">
         <ul class="flex">
-            <li class="w80">
+            <li class="w100 fs20">
                 账户名
             </li>
             <li>
@@ -15,16 +12,17 @@
             </li>
         </ul>
         <ul class="flex">
-            <li class="w80">
+            <li class="w100 fs20">
                 密码
             </li>
             <li>
                 <input type="password" id="password" class="form-control" placeholder="密码" value="">
             </li>
         </ul>
-        <button id="login" type="button" class="btn btn-primary mt20 ml80" >登录</button>
+        <button id="login" type="button" class="btn btn-primary mt20 ml100" >登录</button>
         <a id="findPassword" type="button" class="btn btn-link mt20 ml70">忘记密码</a>
     </div>
+    
     <div class="flex1">
 
     </div>
