--- a/src/main/webapp/static/template/login/register/contentTpl.html
+++ b/src/main/webapp/static/template/login/register/contentTpl.html
@@ -1,13 +1,10 @@
 <div class="login_content flex">
     <div class="flex1">
 
-    </div>
-    <div class="page">
-        <img src="./img/login_sj.jpg">
-    </div>
+    </div>	
     <div class="page input_page">
         <ul class="flex">
-            <li class="w80">
+            <li class="w100 fs20">
                 账户名
             </li>
             <li>
@@ -15,22 +12,22 @@
             </li>
         </ul>
         <ul class="flex">
-            <li class="w80">
+            <li class="w100 fs20">
                 密码
             </li>
             <li>
                 <input type="password" id="password1" class="form-control" placeholder="密码" value="">
             </li>
         </ul>
-        <ul class="flex">
-            <li class="w80">
+        <ul class="flex ">
+            <li class="w100 fs20">
                 确认密码
             </li>
             <li>
                 <input type="password" id="password2" class="form-control" placeholder="确认密码" value="">
             </li>
         </ul>
-        <button id="register" type="button" class="btn btn-primary mt20 ml80" >注册</button>
+        <button id="register" type="button" class="btn btn-primary mt20 ml100" >注册</button>
     </div>
     <div class="flex1">
 
