--- a/src/main/webapp/static/template/common/menusTpl.html
+++ b/src/main/webapp/static/template/common/menusTpl.html
@@ -4,7 +4,7 @@
         <span data-js="<%=data[i].jsPath%>" class="menu_head m0 relative">
             <span class="glyphicon <%=data[i].icon%> left_icon" aria-hidden="true"></span>
             <%=data[i].name%>
-            <span class="glyphicon glyphicon-menu-left right_icon" aria-hidden="true"></span>
+            <span class="glyphicon glyphicon-menu-right right_icon" aria-hidden="true"></span>
         </span>
         <%if(data[i].child && data[i].child.length){%>
         <div class="menu_body">
