--- a/src/main/webapp/static/template/main/contentTpl.html
+++ b/src/main/webapp/static/template/main/contentTpl.html
@@ -1,4 +1,5 @@
-<div class="flex hp100">
+
+<div class="flex hp100" style="border:1px solid #D8EDCF;">
     <div class="hp100" id="leftContent">
 
     </div>
@@ -8,3 +9,4 @@
         </div>
     </div>
 </div>
+
