--- a/src/main/webapp/static/template/login/findPassword/contentTpl.html
+++ b/src/main/webapp/static/template/login/findPassword/contentTpl.html
@@ -1,17 +1,7 @@
-<div class="findPassword_content flex">
-    <div class="flex1">
-        <ul class="flex">
-            <li class="w100 fs20">
-                电子邮箱
-            </li>
-            <li>
-                <input type="text" id="username" class="form-control" placeholder="用户邮箱" value="">
-            </li>
-        </ul>
+<img src="./img/home-hero.jpg" width="100%" height="520px">
 
-        <button id="findPassword" type="button" class="btn btn-primary mt20 ml100" >提交</button>
-    </div>
-    <div class="flex1 bl1" style="border-left: 2px solid #68A1C3;">
-        <a id="register" type="button" class="btn btn-link ml20">注册新帐号</a>
-    </div>
+<div class="absolute loginDiv">
+	<input type="text" id="username" class="form-control" placeholder="用户邮箱" value="">
+	
+	<button id="findPassword" type="button" class="" >提&nbsp;&nbsp;&nbsp;&nbsp;交</button>
 </div>
