--- a/src/main/webapp/static/template/login/login/contentTpl.html
+++ b/src/main/webapp/static/template/login/login/contentTpl.html
@@ -1,29 +1,9 @@
-<div class="login_content flex">
-    <div class="flex1">
+<img src="./img/home-hero.jpg" width="100%" height="520px">
 
-    </div>
-    <div class="page input_page">
-        <ul class="flex">
-            <li class="w100 fs20">
-                账户名
-            </li>
-            <li>
-                <input type="text" id="username" class="form-control" placeholder="用户邮箱" value="">
-            </li>
-        </ul>
-        <ul class="flex">
-            <li class="w100 fs20">
-                密码
-            </li>
-            <li>
-                <input type="password" id="password" class="form-control" placeholder="密码" value="">
-            </li>
-        </ul>
-        <button id="login" type="button" class="btn btn-primary mt20 ml100" >登录</button>
-        <a id="findPassword" type="button" class="btn btn-link mt20 ml70">忘记密码</a>
-    </div>
-    
-    <div class="flex1">
-
-    </div>
+<div class="absolute loginDiv">
+	<input type="text" id="username" class="form-control" placeholder="用户邮箱" value="">
+	<input type="password" id="password" class="form-control" placeholder="密码" value="">
+	
+	<button id="login" type="button" class="" >登&nbsp;&nbsp;&nbsp;&nbsp;录</button>
 </div>
+
