--- a/src/main/webapp/static/template/login/register/contentTpl.html
+++ b/src/main/webapp/static/template/login/register/contentTpl.html
@@ -1,35 +1,8 @@
-<div class="login_content flex">
-    <div class="flex1">
+<img src="./img/home-hero.jpg" width="100%" height="520px">
 
-    </div>	
-    <div class="page input_page">
-        <ul class="flex">
-            <li class="w100 fs20">
-                账户名
-            </li>
-            <li>
-                <input type="text" id="username" class="form-control" placeholder="用户邮箱" value="">
-            </li>
-        </ul>
-        <ul class="flex">
-            <li class="w100 fs20">
-                密码
-            </li>
-            <li>
-                <input type="password" id="password1" class="form-control" placeholder="密码" value="">
-            </li>
-        </ul>
-        <ul class="flex ">
-            <li class="w100 fs20">
-                确认密码
-            </li>
-            <li>
-                <input type="password" id="password2" class="form-control" placeholder="确认密码" value="">
-            </li>
-        </ul>
-        <button id="register" type="button" class="btn btn-primary mt20 ml100" >注册</button>
-    </div>
-    <div class="flex1">
-
-    </div>
+<div class="absolute loginDiv">
+	<input type="text" id="username" class="form-control" placeholder="用户邮箱" value="">
+	<input type="password" id="password1" class="form-control" placeholder="密码" value="">
+	<input type="password" id="password2" class="form-control" placeholder="确认密码" value="">
+	<button id="register" type="button" class="" >注&nbsp;&nbsp;&nbsp;&nbsp;册</button>
 </div>
