--- a/src/main/webapp/static/template/main/headerTpl.html
+++ b/src/main/webapp/static/template/main/headerTpl.html
@@ -1,11 +1,46 @@
-<div class="main_header">
-    <div class="log flex">
-       	<div class="flex1">欢迎使用本系统</div>
-       	<div class="w300">
-    		<a id="personalInfo" class="edit button"><%=$.cookie('loginId')%></a>
-    		<a id="logout" class="edit button">退出登录</a>
-    	</div>
-    </div>
-    
+
+<div id="main_header" class="main_header">
+
+
+	<svg aria-hidden="true" class="octicon octicon-mark-github ml10"
+		height="28" version="1.1" viewBox="0 0 16 16" width="28">
+		<path
+			d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59 0.4 0.07 0.55-0.17 0.55-0.38 0-0.19-0.01-0.82-0.01-1.49-2.01 0.37-2.53-0.49-2.69-0.94-0.09-0.23-0.48-0.94-0.82-1.13-0.28-0.15-0.68-0.52-0.01-0.53 0.63-0.01 1.08 0.58 1.23 0.82 0.72 1.21 1.87 0.87 2.33 0.66 0.07-0.52 0.28-0.87 0.51-1.07-1.78-0.2-3.64-0.89-3.64-3.95 0-0.87 0.31-1.59 0.82-2.15-0.08-0.2-0.36-1.02 0.08-2.12 0 0 0.67-0.21 2.2 0.82 0.64-0.18 1.32-0.27 2-0.27 0.68 0 1.36 0.09 2 0.27 1.53-1.04 2.2-0.82 2.2-0.82 0.44 1.1 0.16 1.92 0.08 2.12 0.51 0.56 0.82 1.27 0.82 2.15 0 3.07-1.87 3.75-3.65 3.95 0.29 0.25 0.54 0.73 0.54 1.48 0 1.07-0.01 1.93-0.01 2.2 0 0.21 0.15 0.46 0.55 0.38C13.71 14.53 16 11.53 16 8 16 3.58 12.42 0 8 0z"></path></svg>
+	<span class="in_block ml10 relative" style="top: -5px;">船舶管理系统</span> 
+		
+		
+		
+	<div class="dropdown in_block right" style="  top: -7px;
+  margin-right: 10px;border-color:#D8EDCF;background-color:#D8EDCF;">
+		<button class="btn btn-default dropdown-toggle p0" type="button"
+			id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
+			aria-expanded="true"  style="box-shadow: none;background-image: none;padding:0;border-color:#D8EDCF;background-color:#D8EDCF;">
+				您好，<%=$.cookie('loginId')%>,欢迎使用本系统！
+			<span class="caret"></span>
+		</button>
+		<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+			<li><a href="#" id="personalInfo">个人信息修改</a></li>
+			<li><a href="#" id="logout">退出登录</a></li>
+		</ul>
+	</div>
 
 </div>
+
+<style>
+#main_header {
+	color: #333;
+	height: 50px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background-color: #D8EDCF;;
+	border-bottom: 1px solid #e5e5e5;
+}
+
+#main_header .btn:active:focus{
+outline: 0;
+}
+
+#main_header .btn:focus{
+outline: 0;
+}
+</style>
