--- a/src/main/webapp/static/template/common/listTpl.html
+++ b/src/main/webapp/static/template/common/listTpl.html
@@ -2,7 +2,7 @@
     <thead>
         <tr>
             <%for(var i = 0; i<otherData.colModel.length; i++){%>
-                <th><%=otherData.colModel[i].name%></th>
+                <th style="border-right: 1px solid #ddd;color: #6B5252;"><%=otherData.colModel[i].name%></th>
             <%}%>
         </tr>
     </thead>
