--- a/src/main/webapp/static/template/main/headerTpl.html
+++ b/src/main/webapp/static/template/main/headerTpl.html
@@ -14,7 +14,7 @@
   margin-right: 10px;border-color:#D8EDCF;background-color:#D8EDCF;">
 		<button class="btn btn-default dropdown-toggle p0" type="button"
 			id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
-			aria-expanded="true"  style="box-shadow: none;background-image: none;padding:0;border-color:#D8EDCF;background-color:#D8EDCF;">
+			aria-expanded="true"  style="box-shadow: none;background-image: none;border-color:#D8EDCF;background-color:#D8EDCF;">
 				您好，<%=$.cookie('loginId')%>,欢迎使用本系统！
 			<span class="caret"></span>
 		</button>
