--- a/src/main/webapp/static/style/business.css
+++ b/src/main/webapp/static/style/business.css
@@ -95,17 +95,24 @@
 	height: 50px;
 }
 
-.right_content table.table td,.right_content table.table th{
-    line-height: 2.428571;
+.right_content table.table td{
+	padding-left:15px;
+    line-height: 3.228571;;
+}
+
+.right_content table.table th{
+	padding-left:15px;
+	line-height: 1.5;
+	background:#F5F5F5;
 }
 .right_content table.table tr:hover{
     background-color: #f5f5f5;
 }
 .right_content .table_nav .text{
-    position: absolute;
-    right: 30px;
-    display: inline-block;
-    line-height: 25px;
+      position: absolute;
+    right: 45px;
+  display: inline-block;
+  line-height: 38px;
 }
 
 .right_content table a.button{
@@ -503,4 +510,85 @@ a.lvBtn:hover{
 .panel-heading{
 	position: relative;
 }
+
+.panel .table-bordered>thead>tr>th{
+	  border-bottom-width:0;
+}
+
+
+.panel .table-bordered>tbody>tr>td, .panel  .table-bordered>tfoot>tr>td, .panel .table-bordered>tfoot>tr>th, .panel .table-bordered>thead>tr>td,.panel .table-bordered>thead>tr>th {
+  border: 0;
+  border-bottom:1px solid #ddd;
+}
+
+.panel .table-bordered>tbody>tr>th{
+	border-right:1px solid red;
+}
+
+.right_content .listItem .button{
+	padding:0;
+	padding-right:10px;
+}
+.right_content .table{
+	margin-bottom:0;
+}
+
+.table_nav{
+	-webkit-appearance: none;
+-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+background-color: rgb(250, 250, 250);
+background-image: none;
+background-position: 50% 50%;
+background-repeat: repeat;
+border-bottom-color: rgb(230, 230, 230);
+border-bottom-style: solid;
+border-bottom-width: 0px;
+border-left-color: rgb(230, 230, 230);
+border-left-style: solid;
+border-left-width: 0px;
+border-right-color: rgb(230, 230, 230);
+border-right-style: solid;
+border-right-width: 0px;
+border-top-color: rgb(230, 230, 230);
+border-top-style: solid;
+border-top-width: 1px;
+box-shadow: none;
+box-sizing: content-box;
+clear: both;
+color: rgb(68, 68, 68);
+display: block;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 14px;
+font-style: normal;
+font-variant: normal;
+font-weight: normal;
+height: 36.984375px;
+line-height: 18.003999710083px;
+list-style-image: none;
+list-style-position: outside;
+list-style-type: none;
+outline-color: rgb(68, 68, 68);
+outline-style: none;
+outline-width: 0px;
+overflow-x: hidden;
+overflow-y: hidden;
+padding-bottom: 6.00600004196167px;
+padding-left: 3.5px;
+padding-right: 0px;
+padding-top: 6.00600004196167px;
+position: relative;
+white-space: normal;
+width: 801.5px;
+zoom: 1;
+width:99%;
+}
+
+#prePage{
+	cursor: pointer;
+}
+
+#nextPage{
+	cursor: pointer;
+}
+
 	
