--- a/src/main/webapp/static/template/humidity/listTpl.html
+++ b/src/main/webapp/static/template/humidity/listTpl.html
@@ -1,5 +1,5 @@
 <div class="list_top">
-	<button id="chart" type="button" class="btn btn-primary right">图表模式></button>
+	<button id="chart" type="button" class="btn btn-success right">图表<span class="glyphicon glyphicon-stats" aria-hidden="true"></span></button>
 </div>
 <div class="panel panel-success">
   <div class="panel-heading">
