--- a/src/main/webapp/static/template/remindValue/listTpl.html
+++ b/src/main/webapp/static/template/remindValue/listTpl.html
@@ -1,5 +1,5 @@
 <div class="list_top">
-	<button id="add" type="button" class="btn btn-primary right">新增</button>
+	<button id="add" type="button" class="btn btn-primary right">新增<span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
 </div>
 <div class="panel panel-success">
   <div class="panel-heading">
