--- a/src/main/webapp/static/template/temperature/chartTpl.html
+++ b/src/main/webapp/static/template/temperature/chartTpl.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="flex1">
-	<button id="search" type="button" class="flex1 btn btn-warning right">查询</button>
+	<button id="search" type="button" class="flex1 btn btn-warning right">查询<span class="glyphicon glyphicon-search" aria-hidden="true"></button>
 </div>
 </div>
 
