--- a/src/main/webapp/static/template/humidity/listTpl.html
+++ b/src/main/webapp/static/template/humidity/listTpl.html
@@ -1,6 +1,6 @@
-<div class="list_top">
+<!-- <div class="list_top">
 	<button id="chart" type="button" class="btn btn-success right">图表<span class="glyphicon glyphicon-stats" aria-hidden="true"></span></button>
-</div>
+</div> -->
 <div class="panel panel-success">
   <div class="panel-heading">
     <h3 class="panel-title">湿度管理</h3>
