--- a/src/main/webapp/static/template/main/contentTpl.html
+++ b/src/main/webapp/static/template/main/contentTpl.html
@@ -1,11 +1,11 @@
 
 <div class="flex hp100" style="border:1px solid #D8EDCF;">
-    <div class="hp100" id="leftContent">
+    <div class="hp100" id="leftContent" style="background: #89B179;">
 
     </div>
     <div id="rightContent" class="right_content flex1">
-        <div class="welcome">
-         	欢迎使用本系统
+        <div class="welcome relative">
+         	<img src="./img/welcome.jpg" height="100%" width="100%">
         </div>
     </div>
 </div>
