--- a/src/main/webapp/static/template/remindValue/addTpl.html
+++ b/src/main/webapp/static/template/remindValue/addTpl.html
@@ -10,9 +10,9 @@
         <label for="warning">警告值</label>
         <input type="text" class="form-control" id="warning" placeholder="警告值" value="">
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label for="serious">严重值</label>
         <input type="text" class="form-control" id="serious" placeholder="严重值" value="">
-    </div>
+    </div> -->
     <button id="submit" type="button" class="btn btn-warning right">提交</button>
 </div>
