--- a/src/main/webapp/static/template/common/menusTpl.html
+++ b/src/main/webapp/static/template/common/menusTpl.html
@@ -1,6 +1,6 @@
 <div class="left_menus">
     <%for(var i = 0; i<data.length; i++){%>
-    <div class="menus_block">
+    <div class="menus_block" style="position: relative;">
         <span data-js="<%=data[i].jsPath%>" class="menu_head m0 relative">
             <span class="glyphicon <%=data[i].icon%> left_icon" aria-hidden="true"></span>
             <%=data[i].name%>
@@ -13,6 +13,9 @@
             <%}%>
         </div>
         <%}%>
+        <div class="triangle_border_right" style="display:none;">
+    	</div>
     </div>
+    
     <%}%>
 </div>
